--- a/styles/sass/_section.scss
+++ b/styles/sass/_section.scss
@@ -1,2 +1,98 @@
-@import "colors";
 @import "responsive";
+
+main {
+
+    .sect1{
+        background: linear-gradient(180deg, rgba(11, 29, 38, 0) 0%, #0B1D26 5.38%);
+        position: relative;
+        top: 100px;
+
+        .container{
+            padding: 0 229px;
+
+            .content-container{
+
+                .content-box{
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    gap: 184px;
+
+                    .content-description{
+
+                        h2{
+                            color: white;
+                            font-size: 64px;
+                            font-weight: 400;
+                            line-height: 76.8px;
+                            text-align: left;
+                            margin-top: 27px;
+                            margin-bottom: 27px;
+                        }
+
+                        p{
+                            color: #FFFFFF;
+                            font-family: "Lato", sans-serif;
+                            font-size: 18px;
+                            font-weight: 700;
+                            line-height: 32px;
+                            text-align: left;
+                            margin-bottom: 27px;
+                        }
+
+                        button{
+                            display: flex;
+                            align-items: center;
+                            gap: 16px;
+                            
+                            span{
+                                color: #FBD784;
+                                font-size: 18px;
+                                font-family: "Lato", sans-serif;
+                            }
+                            img{
+                                margin-top: 5px;
+                            }
+                        }
+                    }
+
+                    .content-img{
+                        width: 500px;
+                        height: 500px;
+                    }
+                }
+
+                .img001{
+                    position: absolute;
+                    top: -100px;
+                    left: 80px;
+                    color: #FFFFFF;
+                    opacity: 10%;
+                    font-family: "Lato", sans-serif;
+                    font-size: 240px;
+                    font-weight: 700;
+                    line-height: 240px;
+                    text-align: left;
+                }
+            }
+
+            .content2{
+                margin-top: 200px;
+                margin-bottom: 200px;
+
+                .img02{
+                    top: 600px;
+                    left: 650px;
+                }
+            }
+
+            .content3{
+                padding-bottom: 200px;
+
+                .img03{
+                    top: 1290px;
+                }
+            }
+        }
+    }
+}
